# CW_3

./: README.md  main.py  pyproject.toml  settings.py
src/: classes.py  utils.py
tests/: conftest.py  test_classes.py  test_utils.py
