[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["Елена Прилуцкая <a.priluckay87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
